--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
