--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.1",
     "recoil": "^0.7.7",
     "sharp": "^0.33.5"
   },
