--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "recoil": "^0.7.7",
+    "sass": "^1.83.1",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
